<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:useDefaultMargins="true"
    android:columnCount="2">
    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/purchase_price"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/purchasePriceEditText"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:autofillHints=""
        android:background="@color/input_color"
        android:hint="@string/enter_purchase_price"
        android:inputType="numberDecimal"
        android:maxLength="10"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/down_payment"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/downPaymentEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:autofillHints=""
        android:background="@color/input_color"
        android:maxLength="10"
        android:hint="@string/enter_down_payment_amount"
        android:inputType="number"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/interest_rate"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/interestRateEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:autofillHints=""
        android:background="@color/input_color"
        android:maxLength="10"
        android:hint="@string/enter_interest_rate"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/loanAmountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_gravity="end"
        android:text="@string/loan_amount"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/loanAmountResultView"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_gravity="top"
        android:background="@color/result_color"
        android:contentDescription="@string/loanAmount"
        android:minHeight="35dp"
        android:textColor="#37474F"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/loanTermTextView"
        android:layout_width="wrap_content"
        android:layout_height="32sp"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_gravity="center_vertical"
        android:text="@string/loan_term"
        android:textSize="20sp"
        tools:ignore="TextSizeCheck" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="221dp"
        android:layout_height="45dp"
        android:layout_row="4"
        android:layout_column="1"
        android:progress="1"
        android:max="2"

         />

    <TextView
        android:id="@+id/monthlyPaymentView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_gravity="end"
        android:paddingStart="10dp"
        android:text="@string/monthly_payment"
        android:textSize="20sp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/paymentResultView"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="1"
        android:background="@color/result_color"
        android:minHeight="35dp"
        android:text=""
        android:textSize="20sp" />

</GridLayout>